(lang dune 3.10)

(name reasonApproximation)

(generate_opam_files true)

(source
 (github Leatherlord/reasonApproximation))

(authors "Boyko Vladislav")

(maintainers "Boyko Vladislav")

(package
 (name reasonApproximation)
 (synopsis "Functional Programming third assignment.")
 (description "Function approximation in ReasonML")
 (depends ocaml dune reason))
